--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   */: center;
@@ -143,13 +144,6 @@ label {
   z-index: 0;
 }
 
-/*#results-menu {
-	z-index: 100;
-	position: fixed;
-	margin-top: 45px;
-	background-color: white;
-}*/
-
 #future-date-form,
 #new-location-form {
   position: relative;
@@ -233,10 +227,9 @@ label {
 
 /* mobile */
 
-@media only screen and (max-device-width: 640px) {
+@media only screen and (max-width: 640px) {
   html {
     width: 100%;
-    /*position: absolute;*/
     overflow: scroll;
   }
 
@@ -256,15 +249,16 @@ label {
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
-    margin: 20%;
   }
+
 
   #homepage-form {
     margin-bottom: 20px;
   }
 
   #main-fieldset {
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     width: 75px;
   }
 
@@ -274,31 +268,52 @@ label {
   }
 
   #location-input {
-    margin-bottom: 5%;
+  width: 165px;
+  height: 53px;
+  margin-bottom: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #f1eded;
+  border: none;
+  font-size: 30px;
+  }
+
+  #geolocation-button {
+    font-size: 23px;
+    line-height: 80%;
+    height: 60px;
   }
 
   #submit-location-button {
     background-color: #eb5757;
     width: 75px;
+    height: 40px;
     font-size: 30px;
     margin-bottom: 10%;
+    text-align: center;
+    padding-bottom: 10px;
   }
 
-  #map {
-    height: 100%;
-    width: 100%;
+  .gm-style-iw {
+    width: 175px;
+  }
+
+  .open-nav {
+    position: fixed;
+    padding: 10px 15px;
+    top: 60px;
+    left: 20px;
+    z-index: 1000;
+    background-color: #eb5757;
   }
 }
 
-/*asd*/
 
 .open-nav {
   position: fixed;
-  /* width: 100px;
-  height: 100px; */
   padding: 10px 15px;
   top: 60px;
   left: 60px;
   z-index: 1000;
-  background-color: white;
+  background-color: #eb5757;
 }
