--- a/main.css
+++ b/main.css
@@ -114,6 +114,7 @@ legend {
   margin-bottom: 20%;
   background-color: #f1eded;
   border: none;
+  font-size: 30px;
 }
 
 #submit-location-button {
