input text size edit for responsive/mobile

--- a/main.css
+++ b/main.css
@@ -286,9 +286,10 @@ label {
   margin-bottom: 5%;
   margin-left: auto;
   margin-right: auto;
-  background-color: #f1eded;
-  border: none;
+  font-size: 20px;
+
   }
+
 
   #submit-location-button {
     background-color: #eb5757;
