--- a/main.css
+++ b/main.css
@@ -283,7 +283,7 @@ label {
   #location-input {
   width: 165px;
   height: 40px;
-  margin-bottom: 5%;
+  margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
   font-size: 20px;
@@ -294,12 +294,12 @@ label {
     background-color: #eb5757;
     width: 75px;
     height: 40px;
-    font-size: 30px;
+    font-size: 20px;
     margin-bottom: 10%;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 10px;
+
   }
 
   #new-location-search-submit, #future-date  {
