--- a/main.css
+++ b/main.css
@@ -283,23 +283,21 @@ label {
   #location-input {
   width: 165px;
   height: 40px;
-  margin-bottom: 10px;
+  margin-bottom: 5%;
   margin-left: auto;
   margin-right: auto;
-  font-size: 20px;
+  background-color: #f1eded;
+  border: none;
   }
-
 
   #submit-location-button {
     background-color: #eb5757;
     width: 75px;
     height: 40px;
-    font-size: 20px;
+    font-size: 30px;
     margin-bottom: 10%;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-
+    padding-bottom: 10px;
   }
 
   #new-location-search-submit, #future-date  {
